welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:19: error: not found: value T
  setCouleurBrosse(T(j))
                   ^Array1:25: error: not found: value H
  for (j <- 0 to H-1){
                 ^Array1:26: error: not found: value T
    T(j) = getCouleurSol()
    ^